# docs/swagger.json
@@ -13,7 +13,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8001",
     "basePath": "/",
     "paths": {
         "/api/v1/anime-detail/": {
@@ -436,6 +436,10 @@
                     "type": "string",
                     "example": "haikyuu-movie-gomisuteba-no-kessen"
                 },
+                "cover": {
+                    "type": "string",
+                    "example": "https://gomunime.co/wp-content/uploads/2024/10/140360.jpg"
+                },
                 "details": {
                     "$ref": "#/definitions/repository.Details"
                 },
@@ -488,13 +492,9 @@
                     "type": "string",
                     "example": "Movie"
                 },
-                "url_anime": {
+                "url": {
                     "type": "string",
                     "example": "https://gomunime.co/anime/haikyuu-movie-gomisuteba-no-kessen/"
-                },
-                "url_cover": {
-                    "type": "string",
-                    "example": "https://gomunime.co/wp-content/uploads/2024/10/140360.jpg"
                 }
             }
         },
@@ -1117,6 +1117,10 @@
                     "type": "string",
                     "example": "naruto-kecil"
                 },
+                "cover": {
+                    "type": "string",
+                    "example": "https://v1.samehadaku.how/wp-content/uploads/2024/08/142503.jpg"
+                },
                 "genre": {
                     "type": "array",
                     "items": {
@@ -1151,13 +1155,9 @@
                     "type": "string",
                     "example": "TV"
                 },
-                "url_anime": {
+                "url": {
                     "type": "string",
                     "example": "https://v1.samehadaku.how/anime/naruto-kecil/"
-                },
-                "url_cover": {
-                    "type": "string",
-                    "example": "https://v1.samehadaku.how/wp-content/uploads/2024/08/142503.jpg"
                 }
             }
         },
